This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

20-Feb-2006  (Lars Duening)
  - (Makefile.in) Added a dependency to create patchlevel.h, even if
      the program is made with 'make ldmud'.

20-Feb-2006  (Gnomi)
  - (comm.c) remove_interactive() clobbered the current_object, setting
      it to NULL. It is now preserved (Bug #431).
  - (interpret.c) When executing an efun closure, the tracedepth wasn't
      incremented accordingly (Bug #441).
  - (simulate.c) When executing a non-toplevel callback, the tracedepth
      should not be zeroed out (Bug #441).

08-Jan-2006  (Lars Duening)
  - (make_func.y) When parsing the func_spec file, the preprocessor
      conditionals were handled in a buffer in a no-longer existing
      stack frame. So far, we were lucky, but on a 64-bit machine
      that space was needed by the Bison parser.
  - (driver.h) If the machine uses a 8-Byte
      malloc alignment (e.g. all PowerPC machines), the allocator does
      not replace the system malloc().

27-Nov-2005  (Lars Duening)  (3.2.12)
  - Created snapshot.
  - (object.c) Efun function_exists(): The 'FEXISTS_ALL' result also contains
      information about the function's type, flags, and number of
      arguments (Bug #410).

26-Nov-2005  (Lars Duening)
  - (efuns.c) Efun sscanf(): Added test whether the constant characters after
      a %-field also match - if not, the %-field is considered unmatched
      (suggested by Largo).
  - (efuns, func_spec) Efuns md5(): Accept the number of iterations as
       optional argument (Bug #418).

24-Nov-2005  (Gnomi)
  - (lex.c) <code>(: catch(load_object($1);nolog) :)</code> no
       longer produces a syntax error (Bug #403).

24-Nov-2005  (Lars Duening)
  - (md5.c) The ROTATE_LEFT macro wasn't 64-bit clean (Bug #413).
  - (interpret.c) Using foreach(), when looping over a mapping with no values,