@@ -24,7 +24,7 @@ VARINIT         "__INIT"
     /* Master lfuns */
 
 ABS_PATH        "make_path_absolute"
-COMP_OBJ        "compile_object"
+COMPILE_OBJECT  "compile_object"
 CONNECT         "connect"
 DISCONNECT      "disconnect"
 EPILOG          "epilog"
