@@ -17,7 +17,7 @@ version_longtype="development"
 # A timestamp, to be used by bumpversion and other scripts.
 # It can be used, for example, to 'touch' this file on every build, thus
 # forcing revision control systems to add it on every checkin automatically.
-version_stamp="Mon Feb 20 23:44:45 MST 2006"
+version_stamp="Tue Feb 28 18:00:54 MST 2006"
 
 # The version number information
 version_micro=12
