@@ -1,6 +1,12 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+28-Feb-2006  (Lars Duening)
+  - (simulate.c) Virtual blueprint objects are guaranteed to have their
+      'clone' flag unset.
+  - (string_spec, simulate.c) Renamed COMP_OBJ to the more intuitive
+      COMPILE_OBJECT.
+
 20-Feb-2006  (Lars Duening)
   - (Makefile.in) Added a dependency to create patchlevel.h, even if
       the program is made with 'make ldmud'.
